hidden onother tabs

--- a/style.css
+++ b/style.css
@@ -1157,3 +1157,7 @@ body.resizing .resize-handle {
     left: 7.5px;
     border-left: 1px dashed var(--border-color-primary);
 }
+
+div.tab-nav{
+    visibility: hidden;
+}
